bug fixed - :nth-child() issue on iOS8
replaced :nth-child() with :nth-of-type()

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -145,22 +145,22 @@ header {
 		@include animation(cd-pulse 2s infinite);
 	}
 
-	&:first-child { // set these positions of interest points according to your product image
+	&:nth-of-type(1) { // set these positions of interest points according to your product image
 		bottom: 40%;
 		right: 30%;
 	}
 
-	&:nth-child(2) {
+	&:nth-of-type(2) {
 		bottom: 24%;
 		right: 46%;
 	}
 
-	&:nth-child(3) {
+	&:nth-of-type(3) {
 		top: 28%;
 		left: 20%;
 	}
 
-	&:nth-child(4) {
+	&:nth-of-type(4) {
 		top: 20%;
 		right: 22%;
 	}
